[package]
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
description = """
Sync tool written in rust that can keep different folders in sync but also
supports a partial view on the data. So you can have an archive server tha keeps
all the data and a checkout on your local laptop that only has some of the
files. Its inspired by `syncthing` and `git annex`.
"""
documentation = "https://github.com/AlexanderThaller/syncust"
homepage = "https://github.com/AlexanderThaller/syncust"
license = "MIT"
name = "syncust"
readme = "README.md"
repository = "https://github.com/AlexanderThaller/syncust"
version = "0.1.0"

[dependencies]
bincode = "0.9"
digest = { version = "0.7", features = ["std"]}
failure = "0.1"
log = "0.3"
loggerv = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
sha2 = "0.7"
walkdir = "2"

[dependencies.clap]
features = ["yaml"]
version = "2.29"
